Fix the alignment of long contract names

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -456,7 +456,7 @@ summary {
       pointer-events: none;
       position: absolute;
       right: 2.1rem;
-      top: -2.5rem;
+      top: -2rem;
       transform: rotate(45deg);
       width: 1rem;
       z-index: 5;
